--- a/build.gradle
+++ b/build.gradle
@@ -18,13 +18,31 @@ repositories {
 }
 
 dependencies {
+	// Spring Boot 3.x + Spring Framework 6
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// SpringDoc OpenAPI atualizado
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+
+	// Banco de dados
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.postgresql:postgresql'
+
+	// Testes
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// Forçando o uso do Spring Framework 6 para evitar conflitos
+	implementation 'org.springframework:spring-webmvc:6.0.0'
 }
+
+tasks.jar{
+	manifest {
+		attributes["Main-Class"] = "spring.jey.santander_dev_week.Application"
+	}
+}
+
 
 tasks.named('test') {
 	useJUnitPlatform()
